--- a/department.css
+++ b/department.css
@@ -359,9 +359,10 @@ color: rgb(119, 120, 121);
     gap: 20px;
 }
 .awesome2-item{
+    background-color: rgb(247,249,253);
     width: 30%;
-    border: 1px solid rgb(230, 229, 229);
     height: 300px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     
 }
 .awesome2-item img{
@@ -627,13 +628,14 @@ color: rgb(119, 120, 121);
     display: flex;
     padding: 5%;
     gap: 15px;
+    background-color: rgb(51, 51, 51);
 }
 .cont-item{
     width: 15%;
     height: 280px;
 }
 .cont-item h1{
-    
+    color: #99ccff;;
     font-size: 17px;
     line-height: 2;
 }
@@ -641,6 +643,9 @@ color: rgb(119, 120, 121);
     font-size: 15px;
     color:  rgb(163, 164, 164);
     line-height: 2;
+}
+.cont-item p:hover{
+    color: rgb(167, 0, 179);;
 }
 form {
     display: flex;
