--- a/doctors.css
+++ b/doctors.css
@@ -363,6 +363,8 @@ span{
     height: 400px;
     overflow: hidden;
     border: 1px solid rgb(237, 234, 234);
+   background-color:  rgb(247,249,253);
+   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     
 }
 .image{
@@ -659,13 +661,14 @@ font-size: 15px;
     display: flex;
     padding: 5%;
     gap: 15px;
+    background-color: rgb(51, 51, 51);
 }
 .cont-item{
     width: 15%;
     height: 280px;
 }
 .cont-item h1{
-    
+    color: #99ccff;;
     font-size: 17px;
     line-height: 2;
 }
@@ -673,6 +676,9 @@ font-size: 15px;
     font-size: 15px;
     color:  rgb(163, 164, 164);
     line-height: 2;
+}
+.cont-item p:hover{
+    color: rgb(167, 0, 179);;
 }
 form {
     display: flex;
