--- a/style.css
+++ b/style.css
@@ -319,9 +319,11 @@ img{
     gap: 20px;
 }
 .primary-item{
+    color: white;
     width: 25%;
     height: 150px;
-    background-color: white;
+    background-color: rrgb(2,81,211);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 .primary-item h1{
     text-align: center;
@@ -470,9 +472,10 @@ img{
     gap: 20px;
 }
 .awesome2-item{
+    background-color: rgb(247,249,253);
     width: 30%;
-    border: 1px solid rgb(230, 229, 229);
     height: 300px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     
 }
 .awesome2-item img{
@@ -690,6 +693,7 @@ img{
 .med-item{
     width: 42%;
     height: 60px;
+    
 }
 .med-item>h1{
     font-family:'lexend';
@@ -771,6 +775,8 @@ span{
     height: 400px;
     overflow: hidden;
     border: 1px solid rgb(237, 234, 234);
+   background-color:  rgb(247,249,253);
+   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     
 }
 .image{
@@ -1035,6 +1041,7 @@ font-size: 15px;
 .doc-item{
     width: 35%;
     text-align: center;
+   
 }
 .doc-item img{
     border-radius: 100%;
@@ -1127,6 +1134,7 @@ font-size: 15px;
 .emergency-item{
     width:35%;
     height: 200px;
+    
 }
 .emergency-item h1{
     font-size: 20px;
@@ -1294,6 +1302,8 @@ span{
     height: 400px;
     overflow: hidden;
     border: 1px solid rgb(237, 234, 234);
+    background-color:  rgb(247,249,253);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 .medical2-item.image{
     width: 100%;
@@ -1445,13 +1455,14 @@ span{
     display: flex;
     padding: 5%;
     gap: 15px;
+    background-color: rgb(51, 51, 51);
 }
 .cont-item{
     width: 15%;
     height: 280px;
 }
 .cont-item h1{
-    
+    color: #99ccff;;
     font-size: 17px;
     line-height: 2;
 }
@@ -1459,6 +1470,9 @@ span{
     font-size: 15px;
     color:  rgb(163, 164, 164);
     line-height: 2;
+}
+.cont-item p:hover{
+    color: rgb(167, 0, 179);;
 }
 form {
     display: flex;
